--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<header class="major">
 								<h2>Orient Yacht Club<br />
 								PO Box 161<br/>
-								Orient, New York, 11957<br/>
+								Orient, NY 11957<br/>
 								<br/>
 								631-323-9767</h2>
 								<p>VHF Channel 71<br />
